Some ref, delete, change files